samples/_failures_safe/1761716015_f63862_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b5e23b5.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_2b5e23b5.c:166:9: error: expected declaration or statement at end of input
  166 |         case TOKEN_NUMBER:
      |         ^~~~
./samples/SAFE/__tmp_2b5e23b5.c:166:9: error: expected declaration or statement at end of input
